--- a/dockerfile_for_tf
+++ b/dockerfile_for_tf
@@ -31,6 +31,10 @@ RUN wget "https://mirrors.tuna.tsinghua.edu.cn/anaconda/miniconda/Miniconda3-lat
     /conda/bin/conda create -n tf20 python=3.7.3 && \
     /conda/bin/conda create -n spinningup python=3.6 
     
+    # 如果需要激活的话
+    # RUN echo "source activate myenv" > ~/.bashrc
+    # ENV PATH /opt/conda/envs/env/bin:$PATH
+    # 或者使用shell脚本执行
 #COPY build.sh /build.sh
 #COPY cuda.sh /cuda.sh
 #CMD bash build.sh              
