--- a/dockerfile_for_tf
+++ b/dockerfile_for_tf
@@ -13,7 +13,6 @@ RUN apt update && apt install -y \
     g++-7 \
     vim \
     libopenmpi-dev \
-    socat \
     && rm -rf /var/lib/lists/*
 
 # Install Anaconda
@@ -33,7 +32,8 @@ RUN wget "https://mirrors.tuna.tsinghua.edu.cn/anaconda/miniconda/Miniconda3-lat
     /conda/bin/conda create -n sup python=3.6 && \
     echo "source activate sup" > ~/.bashrc 
     
-ENV PATH /opt/conda/envs/env/bin:$PATH
+#ENV PATH /opt/conda/envs/env/bin:$PATH
+EXPOSE 5000
 
 # install spinningup
 RUN /bin/bash -c "source activate sup" && \
