--- a/dockerfile_for_tf
+++ b/dockerfile_for_tf
@@ -30,6 +30,8 @@ RUN wget "https://mirrors.tuna.tsinghua.edu.cn/anaconda/miniconda/Miniconda3-lat
     /conda/bin/conda update --all --yes && \
     /conda/bin/conda create -n tf20 python=3.7.3 && \
     /conda/bin/conda create -n sup python=3.6 && \
+    echo "export OMPI_MCA_btl_vader_single_copy_mechanism=none #mpi for docker bug" >> ~/.bashrc && \
+    echo "alias ll='ls -al'" >> ~/.bashrc && \ 
     echo "source activate sup" > ~/.bashrc && \
     echo "export PATH='/conda/bin/:$PATH'" > ~/.bashrc 
     
